--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <label for="location">Enter a location:</label>
       <input id="location" type="text">
       <button class="btn-success" id="weatherLocation">Get Current Humidity!</button>
+      <button class="btn-success" id="tempLocation">Get Current Temperature!</button>
       <div class="showWeather"></div>
     </div>
   </body>
