celsius button added

--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
       <h1>Get Weather Conditions From Anywhere!</h1>
       <label for="location">Enter a location:</label>
       <input id="location" type="text">
-      <button class="btn-success" id="weatherLocation">Get Current Humidity!</button>
-      <button class="btn-success" id="tempLocation">Get Current Temperature!</button>
-      <div class="showWeather"></div>
+      <button class="btn btn-success" id="weatherLocation">Get Current Humidity!</button>
+      <button class="btn btn-success" id="tempLocation">Get Current Temperature!</button>
+      <div class="showWeather">
+      </div>
+      <div class="showCelsiusButton">
+        <button class='btn btn-warning' id='celsius'>Temperature in Celsius</button>
+      </div>
     </div>
   </body>
 </html>
