add buttons to toggle between farenheit and celsius

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       <div class="showCelsiusButton">
         <button class='btn btn-warning' id='celsius'>Temperature in Celsius</button>
       </div>
+      <div class="showFarenheitButton">
+        <button class='btn btn-warning' id='farenheit'>Temperature in Farenheit</button>
+      </div>
     </div>
   </body>
 </html>
